# seeg_utils

./: .gitignore  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  main.py  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
seeg_utils/: __init__.py  edf.py  seeg_utils.py  test.ipynb
tests/: test_edf.py  test_seeg_utils.py
