[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
# tox
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py27, py33, py34, py35, pypy, docs
skipsdist = true

[testenv:docs]
basepython=python
changedir=docs
deps=sphinx
commands=
    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html

[testenv]
whitelist_externals = bash
deps =
    -rrequirements_dev.txt
commands =
    py.test
"""