[metadata]
name = seeg_utils
version = 0.1.0
description = utilities for SEEG electrode data
long_description = file: README.rst
long_description_content_type = text/rst
author = Larry Eisenman
author_email = leisenman@wustl.edu
url = https://github.com/lneisenman/seeg_utils

[options]
packages = find:

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
